test-data/apply-configuration/test-forced-error/expected-output/Configuration/Create/cluster-scoped-resources/config.openshift.io/ingresses/002-body-cluster.yaml
apiVersion: config.openshift.io/v1
kind: Ingress
metadata:
  annotations:
    synthetic.mom.openshift.io/controller-instance-name: sample-operator-ingress-creator
  creationTimestamp: null
  name: cluster
spec:
  domain: ""
  loadBalancer:
    platform:
      type: ""
status:
  defaultPlacement: ""
