test-data/apply-configuration/test-forced-error/expected-output/Configuration/Create/cluster-scoped-resources/config.openshift.io/ingresses/bb14-body-cluster.yaml
apiVersion: config.openshift.io/v1
kind: Ingress
metadata:
  name: cluster
spec:
  domain: ""
  loadBalancer:
    platform:
      type: ""
status:
  defaultPlacement: ""
